--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>VisualLearn</h1>
+    <h1>VisualLearn Biblary</h1>
     <nav>
       <ul>
         <li><a href="#" data-topic="science">Ciencia</a></li>
